Make use of syscalls to NTDLL to make memory writable

--- a/RSCDLCEnabler/RSCDLCEnabler.vcxproj.filters
+++ b/RSCDLCEnabler/RSCDLCEnabler.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -52,5 +52,10 @@
     <None Include="d3dx9_42.def">
       <Filter>Resource Files</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <MASM Include="NtProtectVirtualMemory.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
   </ItemGroup>
 </Project>
