--- a/RSCDLCEnabler/RSCDLCEnabler.vcxproj.filters
+++ b/RSCDLCEnabler/RSCDLCEnabler.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="VirtualMemory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="d3dx9_42.def">
@@ -57,5 +60,10 @@
     <MASM Include="NtProtectVirtualMemory.asm">
       <Filter>Source Files</Filter>
     </MASM>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Experiments.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
