Use patched version of NtProtectVirtualMemory instead of syscalls
VMProtect hooks NtProtectVirtualMemory and similar calls (like VirtualProtect) to always return ACCESS_DENIED in order to achieve read only state of the memory.

Syscalling NtProtectVirtualMemory to avoid the hooked version is fine for Windows, but since it relies on the layout of the DLL being consistent, it doesn't work on Linux/Wine.

Since the hook is effectively placed at the beginning of the NtProtectVirtualMemory, we can take the bytes from the original beginning of the function and replace the hook with those bytes during runtime of the game.

Big thanks to mdias for the original implementation of this idea in RS_ASIO.

--- a/RSCDLCEnabler/RSCDLCEnabler.vcxproj
+++ b/RSCDLCEnabler/RSCDLCEnabler.vcxproj
@@ -15,12 +15,14 @@
     <ClCompile Include="DLLMain.cpp" />
     <ClCompile Include="DualLogger.cpp" />
     <ClCompile Include="MemUtil.cpp" />
+    <ClCompile Include="Util.cpp" />
     <ClCompile Include="VirtualMemory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="D3DX9_42.h" />
-    <ClInclude Include="detours.h" />
     <ClInclude Include="DualLogger.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="Util.h" />
     <ClInclude Include="VirtualMemory.h" />
     <ClInclude Include="MemUtil.h" />
   </ItemGroup>
@@ -112,14 +114,12 @@
       <OptimizeReferences>true</OptimizeReferences>
       <ModuleDefinitionFile>d3dx9_42.def</ModuleDefinitionFile>
       <AdditionalLibraryDirectories>SDK Path\Lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);detours.lib;</AdditionalDependencies>
+      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);</AdditionalDependencies>
       <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(TargetPath)" "C:\Program Files (x86)\Steam\steamapps\common\Rocksmith2014\D3DX9_42.dll"</Command>
-      <Command>copy /Y "$(TargetPath)" "$(SolutionDir)D3DX9_42.dll"</Command>
-    </PostBuildEvent>
-    <PostBuildEvent>
+      <Command>copy /Y "$(TargetPath)" "C:\Program Files (x86)\Steam\steamapps\common\Rocksmith2014\D3DX9_42.dll"
+	            copy /Y "$(TargetPath)" "$(SolutionDir)D3DX9_42.dll"</Command>
       <Message>Copying to solution directory...</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
